force-app/main/default/objects/Account_History__c/Account_History__c.object-meta.xml
<CustomObject>
    <label>Account History</label>
    <nameField>
        <displayFormat>AH-{0000}</displayFormat>
        <label>Account History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>