force-app/main/default/objects/Account_History__c/fields/Field_API_name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_name__c</fullName>
    <label>Field API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>