force-app/main/default/objects/Account_History__c/fields/New_value__c.field-meta.xml
<CustomField>
    <fullName>New_value__c</fullName>
    <label>New value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>