force-app/main/default/objects/Account_History__c/fields/Old_value__c.field-meta.xml
<CustomField>
    <fullName>Old_value__c</fullName>
    <label>Old value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>